--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hewmen/serverless-plugin-typescript": "^1.1.17",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.5.1",
     "aws-lambda": "^1.0.6",
     "aws-serverless-express": "^3.4.0",
