--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "dependencies": {
     "@hewmen/serverless-plugin-typescript": "^1.1.17",
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/common": "^8.0.5",
+    "@nestjs/core": "^8.0.5",
+    "@nestjs/mapped-types": "^1.0.0",
+    "@nestjs/platform-express": "^8.0.5",
+    "@nestjs/swagger": "^5.0.9",
     "aws-lambda": "^1.0.6",
     "aws-serverless-express": "^3.4.0",
+    "class-validator": "^0.13.1",
+    "faker": "^5.5.3",
     "plugin": "^0.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -35,7 +38,9 @@
     "serverless-offline": "^8.0.0",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
     "serverless-plugin-typescript": "^1.1.9",
-    "serverless-plugin-warmup": "^5.3.1"
+    "serverless-plugin-warmup": "^5.3.1",
+    "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.36"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
