feat create configuration in project

--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^8.0.5",
     "@nestjs/swagger": "^5.0.9",
+    "@sentry/node": "^6.10.0",
     "aws-lambda": "^1.0.6",
     "aws-serverless-express": "^3.4.0",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "faker": "^5.5.3",
+    "nestjs-typeorm-paginate": "^2.6.0",
+    "pg": "^8.7.1",
     "plugin": "^0.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
